dia-1/lab02/app01/v1/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app01-deployment
  labels:
    app: app01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app01
  template:
    metadata:
      labels:
        app: app01
    spec:
      containers:
      - name: app01
        image: public.ecr.aws/l8p4i2g8/secomp-app01:v01
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: '20m'
            memory: '100Mi'
          limits:
            cpu: '20m'
            memory: '100Mi'
