dia-1/lab02/app01/v1/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app01-service
spec:
  selector:
    app: app01
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
